Password Manager 21.3.0
* Fixed: card removal was not always properly saved
* Import confirmation dialog